--- a/src/main/resources/templates/hello.hbs
+++ b/src/main/resources/templates/hello.hbs
@@ -2,10 +2,9 @@
 <html lang="ko">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Hello Millky</title>
+    <title>Hello</title>
 </head>
 <body>
-<h2>Hello! ${name}</h2>
-<div>Velocity version</div>
+<h2>Hello! {{name}}</h2>
 </body>
 </html>
