--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -1,16 +1,16 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>DK E+I - DB API</title>
+    <title>DK E+I - DB Helper</title>
 </head>
 <body>
 <h3>청년 관련 메뉴</h3>
-<a href="${pageContext.request.contextPath}/youthSearch.do">청년 정보 검색</a><br>
+<a href="youthSearch">청년 정보 검색</a><br>
 <hr/>
 
 <h3>청년 소속 관련 메뉴</h3>
-<a href="${pageContext.request.contextPath}/youthOrgInsert.do">청년 소속 정보 입력</a><br>
-<a href="${pageContext.request.contextPath}/youthOrgSearch.do">청년 소속 정보 검색</a><br>
+<a href="youthOrgInsert">청년 소속 정보 입력</a><br>
+<a href="youthOrgSearch">청년 소속 정보 검색</a><br>
 <hr/>
 </body>
 </html>
