--- a/src/main/resources/templates/youth/youthDetail.hbs
+++ b/src/main/resources/templates/youth/youthDetail.hbs
@@ -79,7 +79,7 @@
     </table>
     <form method="post" action="youthModify">
         <input type="submit" name="modifySubmit" value="상세 정보 수정">
-        <input type="hidden" value="{{youthId}}">
+        <input type="hidden" name="youthId" value="{{youthId}}">
     </form>
 {{else}}
     해당 청년을 찾을 수 없습니다.<br>
