--- a/src/main/resources/templates/youth/youthModify.hbs
+++ b/src/main/resources/templates/youth/youthModify.hbs
@@ -6,7 +6,7 @@
 <h3>청년 - 상세 정보 수정</h3>
 <a href="#" onclick="location.href=document.referrer">이전 페이지로</a>
 <hr>
-<form action="youthModifyResult">
+<form action="youthModifyResult" method="post">
     <table border="1" cellpadding="1">
         <tr>
             <td><b>항목</b></td>
@@ -23,9 +23,9 @@
         <tr>
             <td>성별</td>
             {{#if isMale}}
-                <td><input type="radio" name="gender" value="male" checked="checked">남 <input type="radio" name="isBornChr" value="female">여</td>
+                <td><input type="radio" name="gender" value="M" checked="checked">남 <input type="radio" name="gender" value="F">여</td>
             {{else}}
-                <td><input type="radio" name="gender" value="male">남 <input type="radio" name="isBornChr" value="female" checked="checked">여</td>
+                <td><input type="radio" name="gender" value="M">남 <input type="radio" name="gender" value="F" checked="checked">여</td>
             {{/if}}
         </tr>
         <tr>
@@ -43,17 +43,17 @@
         <tr>
             <td>모태신앙여부</td>
             {{#if isBornChr}}
-                <td><input type="radio" name="isBornChr" value="true" checked="checked">예 <input type="radio" name="isBornChr" value="false">아니오</td>
+                <td><input type="radio" name="isBornChr" value="1" checked="checked">예 <input type="radio" name="isBornChr" value="0">아니오</td>
             {{else}}
-                <td><input type="radio" name="isBornChr" value="true">예 <input type="radio" name="isBornChr" value="false" checked="checked">아니오</td>
+                <td><input type="radio" name="isBornChr" value="1">예 <input type="radio" name="isBornChr" value="0" checked="checked">아니오</td>
             {{/if}}
         </tr>
         <tr>
             <td>자진등록여부</td>
             {{#if isSelfIn}}
-                <td><input type="radio" name="isSelfIn" value="true" checked="checked">예 <input type="radio" name="isSelfIn" value="false">아니오</td>
+                <td><input type="radio" name="isSelfIn" value="1" checked="checked">예 <input type="radio" name="isSelfIn" value="0">아니오</td>
             {{else}}
-                <td><input type="radio" name="isSelfIn" value="true">예 <input type="radio" name="isSelfIn" value="false" checked="checked">아니오</td>
+                <td><input type="radio" name="isSelfIn" value="1">예 <input type="radio" name="isSelfIn" value="0" checked="checked">아니오</td>
             {{/if}}
         </tr>
         <tr>
@@ -63,9 +63,13 @@
         <tr>
             <td>직업 상태</td>
             <td>
-                <select>
+                <select name="occType">
                     {{#each occTypeList}}
-                        <option name="occType" value="{{key}}">{{value}}</option>
+                        {{#if selected}}
+                            <option name="occTypeOption" value="{{key}}" selected>{{value}}</option>
+                        {{else}}
+                            <option name="occTypeOption" value="{{key}}">{{value}}</option>
+                        {{/if}}
                     {{/each}}
                 </select>
             </td>
@@ -73,9 +77,13 @@
         <tr>
             <td>직업</td>
             <td>
-                <select>
+                <select name="occ">
                     {{#each occList}}
-                        <option name="occ" value="{{key}}">{{value}}</option>
+                        {{#if selected}}
+                            <option name="occOption" value="{{key}}" selected>{{value}}</option>
+                        {{else}}
+                            <option name="occOption" value="{{key}}">{{value}}</option>
+                        {{/if}}
                     {{/each}}
                 </select>
             </td>
@@ -83,9 +91,13 @@
         <tr>
             <td>직군</td>
             <td>
-                <select>
+                <select name="bizType">
                     {{#each bizTypeList}}
-                        <option name="bizType" value="{{key}}">{{value}}</option>
+                        {{#if selected}}
+                            <option name="bizTypeOption" value="{{key}}" selected>{{value}}</option>
+                        {{else}}
+                            <option name="bizTypeOption" value="{{key}}">{{value}}</option>
+                        {{/if}}
                     {{/each}}
                 </select>
             </td>
@@ -93,9 +105,13 @@
         <tr>
             <td>신급</td>
             <td>
-                <select>
+                <select name="religionType">
                     {{#each religionTypeList}}
-                        <option name="religionType" value="{{key}}">{{value}}</option>
+                        {{#if selected}}
+                            <option name="religionTypeOption" value="{{key}}" selected>{{value}}</option>
+                        {{else}}
+                            <option name="religionTypeOption" value="{{key}}">{{value}}</option>
+                        {{/if}}
                     {{/each}}
                 </select>
             </td>
@@ -107,20 +123,21 @@
         <tr>
             <td>출석 상태</td>
             {{#if isAttending}}
-                <td><input type="radio" name="isAttending" value="true" checked="checked">예 <input type="radio" name="isAttending" value="false">아니오</td>
+                <td><input type="radio" name="isAttending" value="1" checked="checked">예 <input type="radio" name="isAttending" value="0">아니오</td>
             {{else}}
-                <td><input type="radio" name="isAttending" value="true">예 <input type="radio" name="isAttending" value="false" checked="checked">아니오</td>
+                <td><input type="radio" name="isAttending" value="1">예 <input type="radio" name="isAttending" value="0" checked="checked">아니오</td>
             {{/if}}
         </tr>
         <tr>
             <td>등록 여부</td>
             {{#if isRegistered}}
-                <td><input type="radio" name="isRegistered" value="true" checked="checked">예 <input type="radio" name="isRegistered" value="false">아니오</td>
+                <td><input type="radio" name="isRegistered" value="1" checked="checked">예 <input type="radio" name="isRegistered" value="0">아니오</td>
             {{else}}
-                <td><input type="radio" name="isRegistered" value="true">예 <input type="radio" name="isRegistered" value="false" checked="checked">아니오</td>
+                <td><input type="radio" name="isRegistered" value="1">예 <input type="radio" name="isRegistered" value="0" checked="checked">아니오</td>
             {{/if}}
         </tr>
     </table>
+    <input type="hidden" name="youthId" value="{{youthId}}">
     <input type="submit" value="저장">
 </form>
 </body>
