--- a/src/main/resources/templates/youth/youthSearch.html
+++ b/src/main/resources/templates/youth/youthSearch.html
@@ -6,7 +6,7 @@
 <h3>청년 - 검색</h3>
 <a href="main">처음으로</a>
 <hr>
-<div th:if="${found}">
+<div th:if="${size > 0}">
     전체 개수: <span th:text="${size}"></span>
     <form id="deleteYouthForm" action="youthDeleteResult" method="post">
         <table border="1" cellpadding="1">
@@ -19,7 +19,7 @@
             </tr>
                 <tr th:each="youth : ${youths}">
                     <td><input type="checkbox" name="youthId" th:value="${youth.youthId}"></td>
-                    <td><a th:href="@{youthDetail?youthId=youth.youthId}" th:text="${youth.youthName}"></a></td>
+                    <td><a th:href="@{youthDetail(youthId=${youth.youthId})}" th:text="${youth.youthName}"></a></td>
                     <td th:text="${youth.youthPeer}"></td>
                     <td th:text="${youth.cellPhone}"></td>
                 </tr>
@@ -34,15 +34,15 @@
         <input type="submit" name="insertSubmit" value="청년 추가">
     </form>
     <form id="searchYouthForm" method="post" action="youthSearch">
-        <select name="target" th:each="keyword : ${keywordList}">
-            <option th:value="${keyword.get('key')}" th:text="${keyword.get('name')}"></option>
+        <select name="target">
+            <option th:each="keyword : ${keywordMap}" th:value="${keyword.key}" th:text="${keyword.value}"></option>
         </select>
         <input type="text" name="keyword">
         <input type="submit" name="submit" value="검색">
     </form>
-    <div th:each="pageNumber : ${pageNumbers}">
-        <a th:href="@{youthSearch?page=pageNumber.get('value')}" th:text="${pageNumber.get('display')}"></a>
-    </div>
+    <span th:each="pageNumber : ${pageNumbers}">
+        <a th:href="@{youthSearch(page=${pageNumber})}" th:text="${pageNumber + 1}"></a>
+    </span>
 </div>
 <div th:unless="${found}">청년 목록을 불러올 수 없습니다.</div>
 </body>
