--- a/src/main/resources/templates/youth/youthDeleteResult.html
+++ b/src/main/resources/templates/youth/youthDeleteResult.html
@@ -7,6 +7,6 @@
 <a href="youthSearch">검색 페이지로</a>
 <hr>
 <p th:if="${success}" th:text="${name} 청년 상세 정보 삭제를 성공하였습니다."></p>
-<p th:unless="${success}" th:text="해당 청년 상세 정보 삭제를 실패하였습니다.\n해당 청년 정보를 찾을 수 없습니다."></p>
+<p th:unless="${success}" th:text="해당 청년 상세 정보 삭제를 실패하였습니다. 해당 청년 정보를 찾을 수 없습니다."></p>
 </body>
 </html>
