--- a/src/main/resources/templates/youth/youthModify.html
+++ b/src/main/resources/templates/youth/youthModify.html
@@ -23,7 +23,10 @@
         </tr>
         <tr>
             <td>성별</td>
-            <td><input type="radio" name="gender" title="genderMaleInput" value="M" th:checked="*{gender} == 'M'">남 <input type="radio" name="gender" title="genderFemaleInput" value="F" th:checked="*{gender} == 'F'">여</td>
+            <td>
+                <input type="radio" name="gender" title="genderMaleInput" value="M" th:checked="*{gender.toString().equals('M')}">남
+                <input type="radio" name="gender" title="genderFemaleInput" value="F" th:checked="*{gender.toString().equals('F')}">여
+            </td>
         </tr>
         <tr>
             <td>생년월일</td>
@@ -39,11 +42,17 @@
         </tr>
         <tr>
             <td>모태신앙여부</td>
-            <td><input type="radio" name="isBornChr" title="isBornChrInput" value="1" th:checked="*{isBornChr == 1}">예 <input type="radio" name="isBornChr" title="isBornChrInput" value="0" th:checked="*{isBornChr == 0}">아니오</td>
+            <td>
+                <input type="radio" name="isBornChr" title="isBornChrInput" value="1" th:checked="*{isBornChr == 1}">예
+                <input type="radio" name="isBornChr" title="isBornChrInput" value="0" th:checked="*{isBornChr == 0}">아니오
+            </td>
         </tr>
         <tr>
             <td>자진등록여부</td>
-            <td><input type="radio" name="isSelfIn" title="isSelfInInput" value="1" th:checked="*{isSelfIn == 1}">예 <input type="radio" name="isSelfIn" title="isSelfInInput" value="0" th:checked="*{isSelfIn == 0}">아니오</td>
+            <td>
+                <input type="radio" name="isSelfIn" title="isSelfInInput" value="1" th:checked="*{isSelfIn == 1}">예
+                <input type="radio" name="isSelfIn" title="isSelfInInput" value="0" th:checked="*{isSelfIn == 0}">아니오
+            </td>
         </tr>
         <tr>
             <td>인도자 성명</td>
@@ -52,32 +61,32 @@
         <tr>
             <td>직업 상태</td>
             <td>
-                <select name="occType" title="occTypeInput" th:each="${occTypeList}">
-                    <option name="occTypeOption" selected th:value="${key}" th:selected="${selected}" th:text="${value}"></option>
+                <select name="occType" title="occTypeInput">
+                    <option name="occTypeOption" th:each="occType : ${occTypeList}" th:value="${occType.get('key')}" th:selected="${occType.get('selected')}" th:text="${occType.get('value')}"></option>
                 </select>
             </td>
         </tr>
         <tr>
             <td>직업</td>
             <td>
-                <select name="occ" title="occInput" th:each="${occList}">
-                    <option name="occOption" selected th:value="${key}" th:selected="${selected}"  th:text="${value}"></option>
+                <select name="occ" title="occInput">
+                    <option name="occTypeOption" th:each="occ : ${occList}" th:value="${occ.get('key')}" th:selected="${occ.get('selected')}" th:text="${occ.get('value')}"></option>
                 </select>
             </td>
         </tr>
         <tr>
             <td>직군</td>
             <td>
-                <select name="bizType" title="bizTypeInput" th:each="${bizTypeList}">
-                    <option name="bizTypeOption" selected th:value="${key}" th:selected="${selected}" th:text="${value}"></option>
+                <select name="bizType" title="bizTypeInput">
+                    <option name="occTypeOption" th:each="bizType : ${bizTypeList}" th:value="${bizType.get('key')}" th:selected="${bizType.get('selected')}" th:text="${bizType.get('value')}"></option>
                 </select>
             </td>
         </tr>
         <tr>
             <td>신급</td>
             <td>
-                <select name="religionType" title="religionTypeInput" th:each="${religionTypeList}">
-                    <option name="religionTypeOption" selected th:value="${key}" th:selected="${selected}" th:text="${value}"></option>
+                <select name="religionType" title="religionTypeInput" >
+                    <option name="occTypeOption" th:each="religionType : ${religionTypeList}" th:value="${religionType.get('key')}" th:selected="${religionType.get('selected')}" th:text="${religionType.get('value')}"></option>
                 </select>
             </td>
         </tr>
@@ -87,11 +96,17 @@
         </tr>
         <tr>
             <td>출석 상태</td>
-            <td><input type="radio" name="isAttending" title="isAttendingInput" value="1" th:checked="*{isAttending == 1}">예 <input type="radio" name="isAttending" title="isAttendingInput" value="0" th:checked="*{isAttending == 0}">아니오</td>
+            <td>
+                <input type="radio" name="isAttending" title="isAttendingInput" value="1" th:checked="*{isAttending == 1}">예
+                <input type="radio" name="isAttending" title="isAttendingInput" value="0" th:checked="*{isAttending == 0}">아니오
+            </td>
         </tr>
         <tr>
             <td>등록 여부</td>
-            <td><input type="radio" name="isRegistered" title="isRegisteredInput" value="1" th:checked="*{isRegistered == 1}">예 <input type="radio" name="isRegistered" title="isRegisteredInput" value="0" th:checked="*{isRegistered == 0}">아니오</td>
+            <td>
+                <input type="radio" name="isRegistered" title="isRegisteredInput" value="1" th:checked="*{isRegistered == 1}">예
+                <input type="radio" name="isRegistered" title="isRegisteredInput" value="0" th:checked="*{isRegistered == 0}">아니오
+            </td>
         </tr>
     </table>
     <input type="hidden" name="youthId" th:value="${youth.youthId}">
