UPDATE: change column names for created_date and updated_date UPDATE: set all of the catalog information as eplusi ADD: add an controller and search page template for YouthOrg (ing)

--- a/src/main/resources/templates/youth/youthDetail.html
+++ b/src/main/resources/templates/youth/youthDetail.html
@@ -22,8 +22,9 @@
         </tr>
         <tr>
             <td>성별</td>
-            <td th:if="*{gender.toString().equals('M')}" th:text="남"></td>
-            <td th:if="*{gender.toString().equals('F')}" th:text="여"></td>
+            <td th:if="*{gender == null}">정보 없음</td>
+            <td th:if="*{gender != null && gender.toString().equals('M')}" th:text="남"></td>
+            <td th:if="*{gender != null && gender.toString().equals('F')}" th:text="여"></td>
         </tr>
         <tr>
             <td>생년월일</td>
