--- a/src/main/resources/templates/youthOrg/youthOrgInsert.html
+++ b/src/main/resources/templates/youthOrg/youthOrgInsert.html
@@ -3,10 +3,10 @@
     <title>DK E+I - DB Helper</title>
 </head>
 <body>
-<h3>청년 - 상세 정보 수정</h3>
-<a href="youthSearch">검색 페이지로</a>
+<h3>청년 소속 정보 - 입력</h3>
+<a href="youthOrgSearch">검색 페이지로</a>
 <hr>
-<form action="youthInsertResult" method="post">
+<form action="youthOrgInsertResult" method="post">
     <table border="1" cellpadding="1">
         <tr>
             <td><b>항목</b></td>
@@ -21,76 +21,20 @@
             <td><input type="text" name="youthPeer"></td>
         </tr>
         <tr>
-            <td>성별</td>
-            <td><input type="radio" name="gender" value="M">남 <input type="radio" name="gender" value="F">여</td>
-        </tr>
-        <tr>
-            <td>생년월일</td>
-            <td><input type="text" name="birthDate"></td>
-        </tr>
-        <tr>
-            <td>핸드폰 번호</td>
-            <td><input type="text" name="cellPhone"></td>
-        </tr>
-        <tr>
-            <td>자택주소</td>
-            <td><input type="text" name="homeAddress"></td>
-        </tr>
-        <tr>
-            <td>모태신앙여부</td>
-            <td><input type="radio" name="isBornChr" value="1">예 <input type="radio" name="isBornChr" value="0">아니오</td>
-        </tr>
-        <tr>
-            <td>자진등록여부</td>
-            <td><input type="radio" name="isSelfIn" value="1">예 <input type="radio" name="isSelfIn" value="0">아니오</td>
-        </tr>
-        <tr>
-            <td>인도자 성명</td>
-            <td><input type="text" name="guideName"></td>
-        </tr>
-        <tr>
-            <td>직업 상태</td>
+            <td>직분</td>
             <td>
-                <select name="occType">
-                        <option th:each="occType : ${occTypeList}" name="occTypeOption" th:value="${occType.OccTypeCode}" th:text="${occType.OccType}"></option>
+                <select name="roleType">
+                        <option th:each="roleType : ${roleTypeList}" name="roleTypeOption" th:value="${roleType.RoleCode}" th:text="${roleType.RoleName}"></option>
                 </select>
             </td>
         </tr>
         <tr>
-            <td>직업</td>
+            <td>조직</td>
             <td>
-                <select name="occ">
-                        <option th:each="occ : ${occList}" name="occOption" th:value="${occ.occCode}" th:text="${occ.occName}"></option>
+                <select name="org">
+                        <option th:each="org : ${orgList}" name="orgOption" th:value="${org.orgCode}" th:text="${org.orgName}"></option>
                 </select>
             </td>
-        </tr>
-        <tr>
-            <td>직군</td>
-            <td>
-                <select name="bizType">
-                        <option th:each="bizType : ${bizTypeList}" name="bizTypeOption" th:value="${bizType.bizTypeCode}" th:text="${bizType.bizType}"></option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>신급</td>
-            <td>
-                <select name="religionType">
-                    <option th:each="religionType : ${religionTypeList}" name="religionTypeOption" th:value="${religionType.religionTypeCode}" th:text="${religionType.religionType}"></option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>교회 등록 날짜</td>
-            <td><input type="text" name="churchRegDate"></td>
-        </tr>
-        <tr>
-            <td>출석 상태</td>
-            <td><input type="radio" name="isAttending" value="1">예 <input type="radio" name="isAttending" value="0">아니오</td>
-        </tr>
-        <tr>
-            <td>등록 여부</td>
-            <td><input type="radio" name="isRegistered" value="1">예 <input type="radio" name="isRegistered" value="0">아니오</td>
         </tr>
     </table>
     <input type="submit" value="저장">
